[Core] Fix handling of spaces in makefile deps.

- This handles ' ' and '#' in file names. I investigated but ended up not
   making an attempt to handle other characters as Clang itself does not make an
   attempt to manage the escapes for them, and the GNU Make semantics appear to
   be quite tricky.

 - Fixes: https://bugs.swift.org/browse/SR-1468

 - Based on a patch by Ankit Agarwal!