lib/BuildSystem/BuildSystem.cpp
@@ -1000,12 +1000,14 @@ class ShellCommand : public ExternalCommand {
       }
 
       virtual void actOnRuleDependency(const char* dependency,
-                                       uint64_t length) override {
-        bsci.taskDiscoveredDependency(
-            task, BuildKey::makeNode(StringRef(dependency, length)));
+                                       uint64_t length,
+                                       const StringRef unescapedWord) override {
+        bsci.taskDiscoveredDependency(task, BuildKey::makeNode(unescapedWord));
       }
 
-      virtual void actOnRuleStart(const char* name, uint64_t length) override {}
+      virtual void actOnRuleStart(const char* name, uint64_t length,
+                                  const StringRef unescapedWord) override {}
+
       virtual void actOnRuleEnd() override {}
     };
 
@@ -1247,12 +1249,14 @@ class ClangShellCommand : public ExternalCommand {
       }
 
       virtual void actOnRuleDependency(const char* dependency,
-                                       uint64_t length) override {
-        bsci.taskDiscoveredDependency(
-            task, BuildKey::makeNode(StringRef(dependency, length)));
+                                       uint64_t length,
+                                       const StringRef unescapedWord) override {
+        bsci.taskDiscoveredDependency(task, BuildKey::makeNode(unescapedWord));
       }
 
-      virtual void actOnRuleStart(const char* name, uint64_t length) override {}
+      virtual void actOnRuleStart(const char* name, uint64_t length,
+                                  const StringRef unescapedWord) override {}
+
       virtual void actOnRuleEnd() override {}
     };
 
